위성이미지분류 2.데이터전처리

--- a/eurosat_augmentation.ipynb
+++ b/eurosat_augmentation.ipynb
@@ -429,6 +429,43 @@
     "#클래스 6 : 영구작물(Permanent Crop)을 의미\n",
     "print(info.features[\"label\"].int2str(6))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f267f11",
+   "metadata": {},
+   "source": [
+    "2. 데이터 전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bef05461",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 64\n",
+    "BUFFER_SIZE = 1000\n",
+    "\n",
+    "def preprocess_data(image, label) :\n",
+    "    image = tf.cast(image, tf.float32) / 255.\n",
+    "    return image, label\n",
+    "\n",
+    "train_data = train_ds.map(preprocess_data, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "valid_data = valid_ds.map(preprocess_data, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "\n",
+    "train_data = train_data.shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
+    "valid_data = valid_data.batch(BATCH_SIZE).cache().prefetch(tf.data.AUTOTUNE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8bebce1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
